--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
         "iostream": "cpp",
         "iosfwd": "cpp",
         "istream": "cpp",
-        "fstream": "cpp"
+        "fstream": "cpp",
+        "initializer_list": "cpp",
+        "cerrno": "cpp"
     }
 }
